<resources>
    <string name="app_name">Sunrise</string>
    <string name="verify">Verify</string>
    //Copied
    <string name="action_settings">Settings</string>
    <string name="message">This App will send you an SMS message to verify your phone number. Kindly enter your phone Number</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="start_phone_auth">Start Verification</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="enter_verify_code">Enter SMS Code</string>
    <string name="success_message">You have successfully Logged in</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="offers">Offers</string>
    <string name="category">Category</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="support">Support Center</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="about">About Us</string>
    <string name="cart">Cart</string>
    <string name="signout">Log Out</string>
    <string name="home">Home</string>
    <string name="title_activity_full_nav">FullNav</string>
    <string name="Rs">\u20B9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_maps">Map</string>

    <string-array name="ordercount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_name" translatable="true">SUNRISE</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">Fam2con</string>

</resources>
